--- a/backend-springboot/src/main/resources/application.properties
+++ b/backend-springboot/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
-
 spring.jpa.open-in-view = false
+
+bezkoder.app.jwtSecret= EdwinSecurityKey
+bezkoder.app.jwtExpirationMs= 86400000
