verified via postman

--- a/backend-springboot/src/main/resources/application.properties
+++ b/backend-springboot/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.open-in-view = false
 
 bezkoder.app.jwtSecret= EdwinSecurityKey
 bezkoder.app.jwtExpirationMs= 86400000
+
+securityKey= ToDoServiceSecurityKey
+expiryHours= 240
